<resources>

    <string name="app_name">App Feedback System</string>

    <string name="label_frequently_asked_questions">Frequently Asked Questions</string>
    <string name="label_feature_request">Feature Request</string>
    <string name="label_general_feedback">General Feedback</string>
    <string name="label_bug_report">Bug Report</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="label_description">Description</string>
    <string name="label_subject">Subject</string>
    <string name="label_be_the_first_one_to_add_a_feature_request">Be the first one to add a feature request\nthe button is below ;)</string>
    <string name="label_up_vote">Up Vote</string>
    <string name="label_create_request">Create Request</string>

</resources>
